# TinyInst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm64e.entitlements  assembler.h  bridge.cc  bridge.h  common.cpp  common.h  coverage.cpp  coverage.h  debugger.cpp  debugger.h  hook.cpp  hook.h  hook.md  instruction.h  litecov.cpp  litecov.h  liteinst-coverage.cpp  liteinst-main.cpp  liteinst.cpp  liteinst.h  macos_cov.cpp  macos_cov.h  sslhook-main.cpp  sslhook.cpp  sslhook.h  tinyinst-coverage.cpp  tinyinst.cpp  tinyinst.entitlements  tinyinst.h  unwind.h  x86_helpers.cpp  x86_helpers.h
.github/workflows/: build.yaml
Android/: README.md
Linux/: README.md  arm64.toochain.cmake  debugger.cpp  debugger.h  elffile.cpp  elffile.h  procmaps.cpp  procmaps.h  syscallhook.cpp  syscallhook.h
Windows/: debugger.cpp  debugger.h  winunwind.cpp  winunwind.h
arch/arm64/: arm64_assembler.cpp  arm64_assembler.h  arm64_helpers.cpp  arm64_helpers.h  arm64_litecov.cpp  reg.h
arch/x86/: reg.h  x86_assembler.cpp  x86_assembler.h  x86_helpers.cpp  x86_helpers.h  x86_litecov.cpp
intel_xed/: CMakeLists.txt
macOS/: .gitignore  README.md  arm64e.md  debugger.cpp  debugger.h  debugger_test.cpp  dyld_cache_map_parser.cpp  dyld_cache_map_parser.h  entitlements.xent  machtarget.cpp  machtarget.h  mig.defs  test_app.cpp  unwindmacos.cpp  unwindmacos.h  unwindmacos.hpp
